# cyanrex-lab

./: .gitignore  README.md  TDD.md  start.sh
docker/: README.md  docker-compose.yml
engine/: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md
engine/migrations/: 0001_auth_users_sessions.sql  0002_event_records.sql  0003_user_scripts.sql
engine/src/: config.rs  lib.rs  main.rs
engine/src/models/: auth.rs  c_headers.rs  command.rs  ebpf.rs  environment.rs  event.rs  mod.rs  module.rs  script.rs  settings.rs
engine/src/routes/: auth.rs  c_headers.rs  command.rs  ebpf.rs  events.rs  helper.rs  index.rs  mod.rs  modules.rs  scripts.rs  settings.rs
engine/src/services/: auth_service.rs  c_header_module.rs  command_dispatcher.rs  ebpf_loader.rs  environment_checker.rs  event_bus.rs  mod.rs  module_manager.rs  script_store.rs
engine/tests/: routes_tdd.rs
frontend/: .dockerignore  Dockerfile  README.md  next.config.js  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/pages/: _app.tsx  account.tsx  dashboard.tsx  ebpf.tsx  events.tsx  helper.tsx  index.tsx  login.tsx  modules.tsx  otp-setup.tsx  register.tsx  settings.tsx  terminal.tsx
frontend/scripts/: sync-monaco-assets.mjs
frontend/src/components/: LanguageSwitcher.tsx  SidebarLayout.tsx
frontend/src/i18n/: context.tsx  translations.ts
frontend/styles/: globals.css
modules/module-ebpf/: README.md
modules/module-network/: README.md
modules/module-protocol/: README.md
scripts/: README.md
sdk-js/: README.md  package.json
sdk-js/src/: index.ts
(+4 files in other folders)
