[package]
name = "cyanrex-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
tower-http = { version = "0.6", features = ["cors"] }
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
data-encoding = "2"
uuid = { version = "1", features = ["v4", "serde"] }
aya = "0.13"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
